# DotBot

./: DotBot.cabal  DotBot.prof  LICENSE  README.md  stack.yaml
.stack-work/install/x86_64-linux/lts-7.5/8.0.1/flag-cache/: DotBot-0.1.0.0
nn/: NN.hs
src/: Main.hs
web/: index.css  index.html  index.js
