name:                DotBot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/PiMaker/DotBot#readme
license:             MIT
license-file:        LICENSE
author:              Stefan Reiter
maintainer:          Stefan.Reiter@studierende.htl-donaustadt.at
copyright:           2016 Stefan Reiter
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable DotBot
  hs-source-dirs:      src
                     , nn
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
